// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> snapshots renders anchor list correctly 1`] = `
<div
  class="list"
>
  <a
    class="list-item list-action-item"
    href="#"
  >
    Item 1
  </a>
  <a
    class="list-item list-action-item"
    href="#"
  >
    Item 2
  </a>
</div>
`;

exports[`<List /> snapshots renders button list correctly 1`] = `
<div
  class="list"
>
  <button
    class="list-item list-action-item"
  >
    Item 1
  </button>
  <button
    class="list-item list-action-item"
  >
    Item 2
  </button>
</div>
`;

exports[`<List /> snapshots renders ul list correctly 1`] = `
<ul
  class="list"
>
  <li
    class="list-item"
  >
    Item 1
  </li>
  <li
    class="list-item"
  >
    Item 2
  </li>
</ul>
`;
